On 2 column paragraph image section, height was causing spacing issues.
...when there was only one image. Removing as I can't see why it was important.

--- a/web/themes/custom/sagebootstrap/scss/components/paragraph-columns-image-text.scss
+++ b/web/themes/custom/sagebootstrap/scss/components/paragraph-columns-image-text.scss
@@ -14,9 +14,6 @@
   }
   .images-wrapper {
     position: relative;
-    @include media-breakpoint-up(lg) {
-      height: 350px;
-    }
   }
   .field--name-field-small-image {
     position: absolute;
