--- a/web/themes/custom/sagebootstrap/scss/style.scss
+++ b/web/themes/custom/sagebootstrap/scss/style.scss
@@ -97,7 +97,10 @@ blockquote {
 }
 
 .field--name-field-section-content > .field__item {
-  margin-bottom: 70px;
+  margin-bottom: 2vh;
+  @include media-breakpoint-up(lg) {
+    margin-bottom: 70px;
+  }
   &:last-child {
     margin-bottom: 0;
   }
